--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-or don't.
+It's been 7 years since i've looked at this, but I think it's a script to automatically change the animated gif displayed on gif.tv every 30 seconds, with the idea being you could have this window open and displayed throughout the entire day.
